# rust-whatsapp

./: .gitignore  Cargo.toml  LICENSE  README.md
example/template/: main.rs
example/text/: main.rs
src/: calls.rs  constants.rs  lib.rs
src/template/: language_code.rs  mod.rs
