[package]
name = "rust-whatsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "template"
path = "example/template/main.rs"

[lib]
name = "whatsapp"
path = "src/lib.rs"