[package]
name = "rust-whatsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
template = { path = "src/template" }
calls = { path = "src/calls" }
constants = { path = "src/constants" }
erased-serde = "0.3.25"

[[bin]]
name = "template"
path = "example/template/main.rs"

[lib]
name = "whatsapp"
path = "src/lib.rs"

[lib]
name = "template"
path = "src/template"
